--- a/css/main.css
+++ b/css/main.css
@@ -41,9 +41,24 @@ background: url('../images/cancel_25_2.png') no-repeat;
 /*----------------------------------------------------------*/
 #loadImg {
     display: none;
-    position: absolute;
+    position: fixed;
     z-index: 8888;
+    top: 50%;
+    left: 50%;
+    margin-top: -150px;
+    margin-left: -150px;
 }
+#overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    background: #000;
+}
+/*-------------------------------------------------------------*/
 article, aside, figure, figcaption, footer, header, hgroup, nav, section, summary {
    display: block;
 }
