--- a/css/menu.css
+++ b/css/menu.css
@@ -40,7 +40,7 @@ nav
 {
         height: 31px;
         display: block;
-        border-radius: 3px;
+        /*border-radius: 3px;*/
         font-family: "Liberation Serif", serif;
         color: #000;
         background-color: transparent;
@@ -54,7 +54,7 @@ nav
 #main_menu>ul>li.active>a , #main_menu>ul>li.active>a:hover
 {
         color: #F5FF83;
-        background-color: #6677FF;
+        background-color: #585858;
         text-decoration: none;
         /*border-top: 2px solid gray;
         border-left: 2px solid gray;
@@ -64,8 +64,8 @@ nav
 
 #main_menu>ul>li>a:hover, #main_menu>ul>li:hover>a {
     color: #fff;
-    box-shadow: 0 3px 10px 3px gray;
-    background-color: #8A8C8D;
+    /*box-shadow: 0 3px 10px 3px gray;*/
+    background-color: #585858;
 }
 
 .exitname {color: #9d9d9d;}
@@ -99,7 +99,7 @@ nav
         position: absolute;
         left: 0;
         /*top: 35px;*/
-        background: #8A8C8D;
+        background: #585858;
         min-width: 160%;
         box-shadow: 8px 8px 10px -2px black;
         transition: all .2s ease-in-out;
@@ -110,15 +110,16 @@ nav
     visibility: visible;
     /*margin: 0;*/
 }
-.sub_menu li {
+.sub_menu>li {
         /*display: block;*/
         line-height: 20px;
         width: 95%;
         white-space: nowrap;
-        padding: 0 0 0 10px;
-        padding-right: 4px;
+        padding: 0 4px 0 10px;
+        /*padding-right: 4px;*/
+        border-radius: 5px;
 }
-.sub_menu li a {
+.sub_menu>li>a {
         display: inline-block;
         width: 100%;
         color: #fff;
@@ -131,18 +132,19 @@ nav
         /*padding: 21px 10px;*/
 }
 /*---------------*/
-.sub_menu li:hover{
+.sub_menu>li:hover{
         text-decoration: none;
         /*padding-left: 3px;*/
-        /*box-shadow: 10px 5px 10px 0px black;*/
+        box-shadow: 2px 2px 20px 5px #3A3C3D;
 }
-.sub_menu li:hover {
+.sub_menu>li:hover {
     transition: 0.2s;
     padding-left: 15px;
     padding-right: 0px;
-    /*background-color: #4d4d4d;*/
+    background-color: #FFF;
+    color: #000;
 }
-.sub_menu li:hover a {
-    color: #fff;
+.sub_menu>li:hover a {
+    color: #000;
     text-decoration: underline;
 }
