--- a/css/widgets/editTable/editTable.css
+++ b/css/widgets/editTable/editTable.css
@@ -49,32 +49,32 @@
 }
 .save_row {
 	display: none;
-	background: url(../../../images/widgets/editTable/save_1.png) no-repeat center;
+	background: url(../../../images/widgets/editTable/save.png) no-repeat;
 	cursor: pointer;
 	border: none;
-	height: 100%;
-	width: 23px;
+	height: 20px;
+	width: 20px;
 }
 tr.modified_tr .save_row {
 	display: inline-block;
 }
 .save_row:hover {
-	background: url(../../../images/widgets/editTable/save_1_2.png) no-repeat center;
+	background: url(../../../images/widgets/editTable/save.png) no-repeat 100% 0%;
 }
 /*-----------------------------------------------------*/
 .cancel_row {
 	display: none;
-	background: url(../../../images/widgets/editTable/cancel_1.png) no-repeat center;
+	background: url(../../../images/widgets/editTable/cancel.png) no-repeat;
 	cursor: pointer;
 	border: none;
-	height: 100%;
-	width: 23px;
+	height: 20px;
+	width: 20px;
 }
 tr.modified_tr .cancel_row {
 	display: inline-block;
 }
 .cancel_row:hover {
-	background: url(../../../images/widgets/editTable/cancel_1_2.png) no-repeat center;
+	background: url(../../../images/widgets/editTable/cancel.png) no-repeat 100% 0%;
 }
 /*-----------------------------------------------------*/
 /*-----------------------------------------------------*/
