поиск, возврат товара, редактирование начато

--- a/css/store/expence.css
+++ b/css/store/expence.css
@@ -1,3 +1,10 @@
+.doc_title {
+    float: right;
+    color: #bcbcbc;
+    font-weight: bold;
+    font-size: 3em;
+    margin: 0 20px;
+}
 #form {
     font-family: serif;
     font-size: 16px;
