--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,8 @@ article, aside, figure, figcaption, footer, header, hgroup, nav, section, summar
    display: block;
 }
 * {
-    font-family: Liberation Serif;
+    /*font-family: Liberation Serif;*/
+    font-family: arial;
     margin: 0;
     padding: 0;
 }
