--- a/css/widgets/return/doc.css
+++ b/css/widgets/return/doc.css
@@ -1,15 +1,9 @@
-.write_off_button, .edit_doc_button, .del_doc_button {
+.edit_doc_button, .del_doc_button {
     cursor:pointer;
     width: 25px;
     height: 25px;
     border: none;
     margin-left: 5px;
-}
-.write_off_button {
-	background:url(../../../images/write_off.png) no-repeat;
-}
-.write_off_button:hover {
-	background:url(../../../images/write_off.png) no-repeat 100% 0%;
 }
 .del_doc_button {
 	background:url(../../../images/del.png) no-repeat;
@@ -28,15 +22,14 @@
 
 /*------------------- PARENT TABLE -------------------------------------------*/
 .parent {
-	background-color: #cfcfcf;
+	/*background-color: #efefef;*/
 	/*border-collapse: collapse;*/
-	border: 1px solid black;
 
 }
 .parent_header th{
 	background-color: #efefef;
 	height: 30px;
-	border: 1px solid #efefef;
+	border: 1px solid #000;
 }
 /*.p_caption_0,.p_caption_1,.p_caption_2 {
 	width: 80px;
@@ -77,7 +70,7 @@
 	background-color: #99FF99;
 }
 .parent td {
-	border: 1px solid #ffffe0; /*#efefef*/
+	border: 1px solid #efefef;
 }
 /*------------------- CHILD TABLE --------------------------------------------*/
 .child_row td{
@@ -155,10 +148,7 @@
 	border-color: red;
 }
 /*------------------------------------------*/
-.cell_3, .cell_4 {
-	text-align: center;
-}
-.cell_5, .cell_6 {
+.cell_3,.cell_4,.cell_5 {
 	text-align: right;
 }
 
