--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ background: url(../images/cancel.png) no-repeat 100% 0%;
     width: 100%;
     height: 100%;
     opacity: 0.5;
-    background: #000;
+    background: #4FB7BC;
 }
 /*-------------------------------------------------------------*/
 article, aside, figure, figcaption, footer, header, hgroup, nav, section, summary {
