--- a/css/store/invoice.css
+++ b/css/store/invoice.css
@@ -11,8 +11,22 @@
     /*height: 24px;*/
 }
 /*----------------------------------------------------------------------*/
+.edit_contact {
+    position: relative;
+    top: 9px;
+    cursor: pointer;
+    border: none;
+    width: 25px;
+    height: 25px;
+    background: url(../../images/edit_r.png);
+}
+.edit_contact:hover {
+    background-position: 100% 0%
+}
+/*---*/
 .add_contact {
-    position: absolute;
+    position: relative;
+    top: 9px;
     cursor: pointer;
     border: none;
     width: 25px;
@@ -175,3 +189,4 @@ label {
 .itog_summ {
     padding-right: 5px;
 }
+/*---------------------------------------------------*/
